--- a/kabob_churn_DisplayData.ipynb
+++ b/kabob_churn_DisplayData.ipynb
@@ -26,36 +26,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                           msno  city  bd  gender  \\\n",
-      "0  Rb9UwLQTrxzBVwCB6+bCcSQWZ9JiNLC9dXtM1oEsZA8=     1   0     NaN   \n",
-      "1  +tJonkh+O1CA796Fm5X60UMOtB6POHAwPjbTRVl/EuU=     1   0     NaN   \n",
-      "2  cV358ssn7a0f7jZOwGNWS07wCKVqxyiImJUX6xcIwKw=     1   0     NaN   \n",
-      "3  9bzDeJP6sQodK73K5CBlJ6fgIQzPeLnRl0p5B77XP+g=     1   0     NaN   \n",
-      "4  WFLY3s7z4EZsieHCt63XrsdtfTEmJ+2PnnKLH5GY4Tk=     6  32  female   \n",
-      "5  yLkV2gbZ4GLFwqTOXLVHz0VGrMYcgBGgKZ3kj9RiYu8=     4  30    male   \n",
-      "6  jNCGK78YkTyId3H3wFavcBLDmz7pfqlvCfUKf4G1Lw4=     1   0     NaN   \n",
-      "7  WH5Jq4mgtfUFXh2yz+HrcTXKS4Oess4k4W3qKolAeb0=     5  34    male   \n",
-      "8  tKmbR4X5VXjHmxERrckawEMZ4znVy1lAQIR1vV5rdNk=     5  19    male   \n",
-      "9  I0yFvqMoNkM8ZNHb617e1RBzIS/YRKemHO7Wj13EtA0=    13  63    male   \n",
+      "                                                 msno  city  bd  gender  \\\n",
+      "0        Rb9UwLQTrxzBVwCB6+bCcSQWZ9JiNLC9dXtM1oEsZA8=     1   0     NaN   \n",
+      "1        +tJonkh+O1CA796Fm5X60UMOtB6POHAwPjbTRVl/EuU=     1   0     NaN   \n",
+      "2        cV358ssn7a0f7jZOwGNWS07wCKVqxyiImJUX6xcIwKw=     1   0     NaN   \n",
+      "3        9bzDeJP6sQodK73K5CBlJ6fgIQzPeLnRl0p5B77XP+g=     1   0     NaN   \n",
+      "4        WFLY3s7z4EZsieHCt63XrsdtfTEmJ+2PnnKLH5GY4Tk=     6  32  female   \n",
+      "5        yLkV2gbZ4GLFwqTOXLVHz0VGrMYcgBGgKZ3kj9RiYu8=     4  30    male   \n",
+      "6        jNCGK78YkTyId3H3wFavcBLDmz7pfqlvCfUKf4G1Lw4=     1   0     NaN   \n",
+      "7        WH5Jq4mgtfUFXh2yz+HrcTXKS4Oess4k4W3qKolAeb0=     5  34    male   \n",
+      "8        tKmbR4X5VXjHmxERrckawEMZ4znVy1lAQIR1vV5rdNk=     5  19    male   \n",
+      "9        I0yFvqMoNkM8ZNHb617e1RBzIS/YRKemHO7Wj13EtA0=    13  63    male   \n",
+      "10       OoDwiKZM+ZGr9P3fRivavgOtglTEaNfWJO4KaJcTTts=     1   0     NaN   \n",
+      "11       dCvvBHlaOAqgkAcv36IZ9twaCyH0Z9om0wEiKn13B3o=    22  18    male   \n",
+      "12       6bra2AiVV8SGlm7R6mp97Ot5jU9FBH2/8JaRk0iaKco=     4  34  female   \n",
+      "13       4De1jAxNRABoyRBDZ82U0yEmzYkqeOugRGVNIf92Xb8=     4  28  female   \n",
+      "14       iOzdu4IHbJxhB5CPpiQsZcGdptCm7OLwWm1Ci6oHLSE=    12  29  female   \n",
+      "15       hZia/3iyvtThD1kv6ozRjRj8T0CAz0+zUFxs3e27wo8=     1   0     NaN   \n",
+      "16       QlDflP89J5KChheo2sbtH++SSDY/hUDj54gkgdfE76U=     1   0     NaN   \n",
+      "17       fOpj0ApSXk1NVODvC5db5Tvm/1G6exXxgTiCwTqvQn0=    13  31  female   \n",
+      "18       GsPgdrXoV6688/0RFAwjKxQUpBB28JxK/Nx45kEpH60=     1   0     NaN   \n",
+      "19       QHHKGOY5yLrGdR8WYb0JtdJTP36Ii1QP3QTXxjEpGLk=     5  19  female   \n",
+      "20       SpiCVwYrNY2XIpPpZkHHq4LDTfYyPNxBx7e+klc19H4=    15  22  female   \n",
+      "21       +N2Na8js4BYLhkDXYD94o/5Tn5j1yi9u/+6F8an1MUs=     4  23    male   \n",
+      "22       F6F2FJSHqQ/TLf7fQHJe1nbonEZmrCHtzG87U8VD9rE=    11  22  female   \n",
+      "23       FotY8kXSC6tIyCuVn0NoaXjo0Hd854wuoNMWuwHaLIA=     5  29    male   \n",
+      "24       glvtik6LgKzz/VHI8f7dAAHW4iqU8azER8mEsImDe78=     9  21    male   \n",
+      "25       x+j0IrKnXLIqZawwAtwldq2by7TLMKyohbtSeT5gtDg=     9  22    male   \n",
+      "26       7XXoaLnR+58yBjV/dtpvsvnkbadWYxO3+KkLgaaJ0VM=     5  28    male   \n",
+      "27       GqYHRxlZChiZvB1uzR410wcQzuxqZNZci4AzOTzkAao=     5  27    male   \n",
+      "28       vqz848bjeylg9nGoax8X4qQX2IX8qPwEq+4vbOpgy4c=    13  47  female   \n",
+      "29       ZXtW2HuuVK4aPiO10RhBWT1PmLV+bKqnFlT5bL6YhoQ=     4   0     NaN   \n",
+      "...                                               ...   ...  ..     ...   \n",
+      "6769443  dz8iQV2eZCBZo1DjKL7OifsiyzGf3xyMaCFDOJHVeyc=     1   0     NaN   \n",
+      "6769444  hc/t3OlBHhN/99/usrWrjGJTlf9wbAcOeHMBJ41QTN0=     1   0     NaN   \n",
+      "6769445  6GUYpq8GC07duotA9Ww9EXCuhPaLAXBgKGSeR7jkWKo=     1   0     NaN   \n",
+      "6769446  kB6WjrrdzSl0GMASY6BagCSV72TcwasA4W6vY8KmV5Q=     1   0     NaN   \n",
+      "6769447  yBIr7TnCh8W2zZ+tmsoQ/4FO1TBELCLiT3iR+Xoq5/c=     1   0     NaN   \n",
+      "6769448  LfE8yToqqHz5HoIglTJSrNA3jUNGSnWZEgS/+O87rsk=    13  22    male   \n",
+      "6769449  B3Ej5OgW2lauvRkxy0lLVGYhcRoyxANUURIm/EbfNX8=     1   0     NaN   \n",
+      "6769450  8KEWLOUggktIjiT3bKpgcACB3WbkoP74WabNYz2EVE0=     1   0     NaN   \n",
+      "6769451  zEbFxXsp+eaHF8tSEASFSJfTjaes+zNYLmTlpA3HHUU=     1   0     NaN   \n",
+      "6769452  nekPR84bVpE4HSgxlW4H3+SIxLJWZCSctP0VEFrT1Pk=    15  19    male   \n",
+      "6769453  WDGMzy3arZrbDZWAd/BaWTKmILEF9N2zHRN2gfciPKY=     1   0     NaN   \n",
+      "6769454  wv7xKoYMhXk+UT6x6GDrXC3aJ7O5RPWXZhSkS9TfLl0=     6  32    male   \n",
+      "6769455  IwDZCuhB0UP7wrBwuqE1r1jQIA0yFSTqUGlGJnM+hMI=     1  52    male   \n",
+      "6769456  O17RLjJp7AVhS1G1TJ8LjZHoIeoeGi1jwlV3kIth47Q=     1   0     NaN   \n",
+      "6769457  YOqjbC7RQVk/tLpavVvqSFCoZJ7iUjeG6uTvc9JW9nA=     1   0     NaN   \n",
+      "6769458  lN70dnrI/8KjuUfSZPQ4mVCHJXFwpfaXsmnrAWvRB90=     1   0     NaN   \n",
+      "6769459  swUHFmY7ArwcqVEA8UsukGriyE4iGHIukuaG69UGajU=     1   0     NaN   \n",
+      "6769460  PzjxWRuTQAJ3riOHWT6nBTiPrHW/JvUG3rrSfTMYIpY=     1   0     NaN   \n",
+      "6769461  P8weYpM9bCHGGvoUFAhJRRDEaehliI7m0eq51ahKxK4=     1   0     NaN   \n",
+      "6769462  y0rwiAeU5goDatsiUDulPdiJpohZ15hxUAkSJHccnvY=     8  32  female   \n",
+      "6769463  MwBxLTG0c5B1aJTJNovaqR74v+y/H6yTxQt/yqOxr1c=     1   0     NaN   \n",
+      "6769464  2U0grRyv2DB3Pw3crMBhBfsWWq6VkGcK1IGVqmDmK0w=     5  23  female   \n",
+      "6769465  OL6joplCKThE1pZD+AQDnj3kZiC45qzpndlDIRSyPQI=     1   0     NaN   \n",
+      "6769466  O11rAa17ANM6DGMMVb9L2vwCQFv/S6SR3SDB1nGuOAc=     1   0     NaN   \n",
+      "6769467  tyoRqQ72Y2oCcqvdaIxG8T0Hs9DZvuuM8IeTwhxtdBQ=     6  26  female   \n",
+      "6769468  VSGkb3hyBRUtb/b1MQUZbvOkktS3vKLnhMHW0CF8eyU=     1   0     NaN   \n",
+      "6769469  nWjH7glPkZ7jOVaCRwwjlpmp0T1hSWdv8hMJxiWCwKc=     1   0     NaN   \n",
+      "6769470  GH+b5+1tlv7ZZXsA8upBzVXMTLyffKcsF7WoU8b5rOI=    15  26  female   \n",
+      "6769471  XVlwT3fdCFGKqerEKBzUIjK+jzI6jzSke4cDMVhYyjE=     1   0     NaN   \n",
+      "6769472  isBt+JlgvZRNy6lxVr5vvuJ4lD00ofTaKyJ+uRnGcPg=     1   0     NaN   \n",
       "\n",
-      "   registered_via  registration_init_time  \n",
-      "0              11                20110911  \n",
-      "1               7                20110914  \n",
-      "2              11                20110915  \n",
-      "3              11                20110915  \n",
-      "4               9                20110915  \n",
-      "5               9                20110916  \n",
-      "6               7                20110916  \n",
-      "7               9                20110916  \n",
-      "8               9                20110917  \n",
-      "9               9                20110918  \n"
+      "         registered_via  registration_init_time  \n",
+      "0                    11                20110911  \n",
+      "1                     7                20110914  \n",
+      "2                    11                20110915  \n",
+      "3                    11                20110915  \n",
+      "4                     9                20110915  \n",
+      "5                     9                20110916  \n",
+      "6                     7                20110916  \n",
+      "7                     9                20110916  \n",
+      "8                     9                20110917  \n",
+      "9                     9                20110918  \n",
+      "10                    7                20110918  \n",
+      "11                    9                20110919  \n",
+      "12                    9                20110919  \n",
+      "13                    9                20110920  \n",
+      "14                    9                20110922  \n",
+      "15                    9                20110922  \n",
+      "16                    9                20110922  \n",
+      "17                    7                20110923  \n",
+      "18                    7                20110924  \n",
+      "19                    9                20110925  \n",
+      "20                    9                20110925  \n",
+      "21                    9                20110925  \n",
+      "22                    9                20110925  \n",
+      "23                    9                20110926  \n",
+      "24                    9                20110926  \n",
+      "25                    9                20110926  \n",
+      "26                    7                20110927  \n",
+      "27                    9                20110927  \n",
+      "28                    7                20110928  \n",
+      "29                    9                20110928  \n",
+      "...                 ...                     ...  \n",
+      "6769443               7                20151020  \n",
+      "6769444               4                20151020  \n",
+      "6769445               4                20151020  \n",
+      "6769446               4                20151020  \n",
+      "6769447               4                20151020  \n",
+      "6769448               4                20151020  \n",
+      "6769449               4                20151020  \n",
+      "6769450               4                20151020  \n",
+      "6769451               4                20151020  \n",
+      "6769452               4                20151020  \n",
+      "6769453               4                20151020  \n",
+      "6769454               4                20151020  \n",
+      "6769455               4                20151020  \n",
+      "6769456               4                20151020  \n",
+      "6769457               4                20151020  \n",
+      "6769458               9                20151020  \n",
+      "6769459               4                20151020  \n",
+      "6769460               4                20151020  \n",
+      "6769461               4                20151020  \n",
+      "6769462               9                20151020  \n",
+      "6769463               4                20151020  \n",
+      "6769464               4                20151020  \n",
+      "6769465               7                20151020  \n",
+      "6769466               7                20151020  \n",
+      "6769467               7                20151020  \n",
+      "6769468               7                20151020  \n",
+      "6769469               7                20151020  \n",
+      "6769470               4                20151020  \n",
+      "6769471               4                20151020  \n",
+      "6769472               4                20151021  \n",
+      "\n",
+      "[6769473 rows x 6 columns]\n"
      ]
     }
    ],
@@ -63,6 +167,27 @@
     "# -Show dataStructure\n",
     "data = pd.read_csv(\"./kkboxData/members_v3.csv\", nrows=10)\n",
     "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6769473"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data)\n",
+    "\n"
    ]
   },
   {
