--- a/kkbox_churn_inputMysql_members.ipynb
+++ b/kkbox_churn_inputMysql_members.ipynb
@@ -25,13 +25,13 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "df = pd.read_csv('members_v3.csv')\n",
-    "df.head()\n",
+    "#import pandas as pd\n",
+    "#df = pd.read_csv('members_v3.csv')\n",
+    "#df.head()\n",
     "\n",
-    "df.loc[:,'gender']=df.loc[:,'gender'].fillna('nan')\n",
+    "#df.loc[:,'gender']=df.loc[:,'gender'].fillna('nan')\n",
     "\n",
-    "print(len(df))\n",
+    "#print(len(df))\n",
     "#dfLess = df.loc[1:4000]"
    ]
   },
