--- a/kkbox_churn_inputMysql_members.ipynb
+++ b/kkbox_churn_inputMysql_members.ipynb
@@ -195,7 +195,7 @@
     "    if (index+1) % 100 == 0:\n",
     "        session.commit()\n",
     "        time.sleep(0.2)\n",
-    "        print(index)\n",
+    "        print(index+1)\n",
     "session.commit()\n",
     "    "
    ]
