--- a/explore_raw_members.yang/explore_raw_members.ipynb
+++ b/explore_raw_members.yang/explore_raw_members.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -15,13 +15,13 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://master:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://10.120.27.99:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
-       "                <dd><code>v2.3.0</code></dd>\n",
+       "                <dd><code>v2.2.1</code></dd>\n",
        "              <dt>Master</dt>\n",
-       "                <dd><code>spark://master:7077</code></dd>\n",
+       "                <dd><code>local[*]</code></dd>\n",
        "              <dt>AppName</dt>\n",
        "                <dd><code>PySparkShell</code></dd>\n",
        "            </dl>\n",
@@ -31,10 +31,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7feaa08e77b8>"
+       "<pyspark.sql.session.SparkSession at 0x7f18500422e8>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,20 +45,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# read file as a DataFrame\n",
-    "infile = 'hdfs://master:8020/kkbox_churn/kkbox_data/raw_data/members_v3.csv'\n",
+    "infile = '/home/cloudera/Desktop/KKBox_churn_predict/raw_data/members_v3.csv'\n",
+    "#infile = 'hdfs://master:8020/kkbox_churn/kkbox_data/raw_data/members_v3.csv'\n",
     "df0 = spark.read.format('csv').option('header','true').option('sep',',').load(infile)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -67,18 +66,19 @@
        "6769473"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df0.count()"
+    "N = df0.count()\n",
+    "N"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -117,19 +117,14 @@
       "|cV358ssn7a0f7jZOw...|   1|  0|  null|            11|              20110915|\n",
       "|9bzDeJP6sQodK73K5...|   1|  0|  null|            11|              20110915|\n",
       "|WFLY3s7z4EZsieHCt...|   6| 32|female|             9|              20110915|\n",
-      "|yLkV2gbZ4GLFwqTOX...|   4| 30|  male|             9|              20110916|\n",
-      "|jNCGK78YkTyId3H3w...|   1|  0|  null|             7|              20110916|\n",
-      "|WH5Jq4mgtfUFXh2yz...|   5| 34|  male|             9|              20110916|\n",
-      "|tKmbR4X5VXjHmxERr...|   5| 19|  male|             9|              20110917|\n",
-      "|I0yFvqMoNkM8ZNHb6...|  13| 63|  male|             9|              20110918|\n",
       "+--------------------+----+---+------+--------------+----------------------+\n",
-      "only showing top 10 rows\n",
+      "only showing top 5 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "df0.show(10)"
+    "df0.show(5)"
    ]
   },
   {
@@ -223,6 +218,73 @@
    "metadata": {},
    "source": [
     "* ~2/3 of the members do not have 'gender' data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### bd and gender "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4388613"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import isnull\n",
+    "df0.where('bd == 0').where(isnull('gender')).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+------------+-------+\n",
+      "|bd_is_0|gender_is_na|  count|\n",
+      "+-------+------------+-------+\n",
+      "|   true|       false| 151602|\n",
+      "|   true|        true|4388613|\n",
+      "|  false|       false|2188366|\n",
+      "|  false|        true|  40892|\n",
+      "+-------+------------+-------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import expr, isnull\n",
+    "df0.select(expr('bd == 0').alias('bd_is_0'), \n",
+    "           expr('gender IS NULL').alias('gender_is_na')) \\\n",
+    "   .groupBy('bd_is_0', 'gender_is_na').count().show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* members with gender data mostly have 'bd' != 0\n",
+    "* members without gender data mostly have 'bd' = 0\n",
+    "\n",
+    "* 65% of the members have gender = NA and 'bd' = 0\n",
+    "* 32% of the members have gender != NA and 'bd' != 0"
    ]
   },
   {
@@ -347,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.5"
   },
   "toc": {
    "base_numbering": 1,
