--- a/explore_raw_transactions_v1.yang/eda1.ipynb
+++ b/explore_raw_transactions_v1.yang/eda1.ipynb
@@ -15,7 +15,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://10.120.27.99:4041\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://10.120.27.99:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -31,7 +31,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7fb6191d32e8>"
+       "<pyspark.sql.session.SparkSession at 0x7f97c9292390>"
       ]
      },
      "execution_count": 1,
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -108,6 +108,8 @@
      "text": [
       "root\n",
       " |-- msno: string (nullable = true)\n",
+      " |-- list_price: string (nullable = true)\n",
+      " |-- actual_paid: string (nullable = true)\n",
       " |-- plan_days: integer (nullable = true)\n",
       " |-- trans_date: integer (nullable = true)\n",
       " |-- exp_date: integer (nullable = true)\n",
@@ -119,6 +121,8 @@
    ],
    "source": [
     "df1 = df0.selectExpr(\"msno\", \n",
+    "                     \"plan_list_price AS list_price\",\n",
+    "                     \"actual_amount_paid AS actual_paid\",\n",
     "                     \"CAST(payment_plan_days AS int) AS plan_days\", \n",
     "                     \"CAST(transaction_date AS int) AS trans_date\", \n",
     "                     \"CAST(membership_expire_date AS int) AS exp_date\", \n",
@@ -129,20 +133,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------------+---------+----------+--------+-------------+---------+\n",
-      "|                msno|plan_days|trans_date|exp_date|is_auto_renew|is_cancel|\n",
-      "+--------------------+---------+----------+--------+-------------+---------+\n",
-      "|YyO+tlZtAXYXoZhNr...|       30|  20150930|20151101|            1|        0|\n",
-      "|AZtu6Wl0gPojrEQYB...|       30|  20150930|20151031|            1|        0|\n",
-      "|UkDFI97Qb6+s2LWci...|       30|  20150930|20160427|            1|        0|\n",
-      "+--------------------+---------+----------+--------+-------------+---------+\n",
+      "+--------------------+----------+-----------+---------+----------+--------+-------------+---------+\n",
+      "|                msno|list_price|actual_paid|plan_days|trans_date|exp_date|is_auto_renew|is_cancel|\n",
+      "+--------------------+----------+-----------+---------+----------+--------+-------------+---------+\n",
+      "|YyO+tlZtAXYXoZhNr...|       129|        129|       30|  20150930|20151101|            1|        0|\n",
+      "|AZtu6Wl0gPojrEQYB...|       149|        149|       30|  20150930|20151031|            1|        0|\n",
+      "|UkDFI97Qb6+s2LWci...|       129|        129|       30|  20150930|20160427|            1|        0|\n",
+      "+--------------------+----------+-----------+---------+----------+--------+-------------+---------+\n",
       "only showing top 3 rows\n",
       "\n"
      ]
@@ -1141,6 +1145,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df1 = df0.selectExpr(\"msno\", \n",
+    "                     \"CAST(payment_plan_days AS int) AS plan_days\", \n",
+    "                     \"CAST(transaction_date AS int) AS trans_date\", \n",
+    "                     \"CAST(membership_expire_date AS int) AS exp_date\", \n",
+    "                     \"CAST(is_auto_renew AS int)\",\n",
+    "                     \"CAST(is_cancel AS int)\")\n",
+    "\n",
     "df1_clean = df1.where('trans_date >= 20151101') \\\n",
     "               .where('plan_days != 0 OR is_cancel = 1') \\\n",
     "               .where('is_cancel = 0 OR is_auto_renew = 1')"
