--- a/explore_raw_transactions_v1.yang/eda1.ipynb
+++ b/explore_raw_transactions_v1.yang/eda1.ipynb
@@ -31,7 +31,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f97c9292390>"
+       "<pyspark.sql.session.SparkSession at 0x7ffb3c0c51d0>"
       ]
      },
      "execution_count": 1,
@@ -67,14 +67,14 @@
     }
    ],
    "source": [
-    "infile = '/home/cloudera/Desktop/KKBox_churn_predict/raw_data/transactions.csv'\n",
+    "infile = '/home/cloudera/2.kkbox_churn/raw_data/transactions.csv'\n",
     "df0 = spark.read.format('csv').option('header', 'true').load(infile)\n",
     "df0.printSchema()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -175,6 +175,36 @@
    "source": [
     "Nrec = df1.count()\n",
     "Nrec"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# latest transaction date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------+\n",
+      "|max(trans_date)|\n",
+      "+---------------+\n",
+      "|       20170228|\n",
+      "+---------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import max\n",
+    "df1.select(max('trans_date')).show()"
    ]
   },
   {
@@ -1203,7 +1233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.6"
   },
   "toc": {
    "base_numbering": 1,
