--- a/explore_raw_members.yang/explore_raw_members.ipynb
+++ b/explore_raw_members.yang/explore_raw_members.ipynb
@@ -46,7 +46,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# read file as a DataFrame\n",
@@ -1198,7 +1200,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -1219,7 +1223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.2"
   },
   "toc": {
    "base_numbering": 1,
