--- a/create_features_from_transactions_v1.yang/00.dates_correction.ipynb
+++ b/create_features_from_transactions_v1.yang/00.dates_correction.ipynb
@@ -251,7 +251,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_corr_ = df_corr.withColumnRenamed('rid', 'rid_')\n",
@@ -292,7 +294,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# output\n",
@@ -303,7 +307,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -324,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.2"
   },
   "toc": {
    "base_numbering": 1,
