--- a/create_features_from_transactions_v1.yang/31.features_from_transaction_info.ipynb
+++ b/create_features_from_transactions_v1.yang/31.features_from_transaction_info.ipynb
@@ -31,7 +31,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7fcdf0190240>"
+       "<pyspark.sql.session.SparkSession at 0x7f5f684591d0>"
       ]
      },
      "execution_count": 1,
@@ -45,19 +45,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "dir0 = 'file:///home/cloudera/2.kkbox_churn/data01/from_raw_transactions-v1/feature_creation/'\n",
-    "file_flag = 'msno_a-n'\n",
+    "file_flag = 'msno_non-letter'\n",
     "infile_trans = dir0 + '02b.w_features_added/' + file_flag\n",
     "infile_period_lens = dir0 + '21.subscrip-period_intersected_lengths'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,19 +128,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql.functions import count\n",
     "from pyspark.sql.functions import concat_ws, collect_list\n",
     "\n",
-    "field = 'actual_paid'\n",
+    "#field = 'actual_paid'\n",
     "#field = 'auto_renew'\n",
     "#field = 'discount'\n",
     "#field = 'list_price'\n",
     "#field = 'pay_method'\n",
-    "#field = 'plan_days'\n",
+    "field = 'plan_days'\n",
     "\n",
     "df1 = df0.select('msno', field)\n",
     "df2 = df1.groupBy('msno', field).agg(count('*').cast('string').alias('count_trans'))\n",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 74,
    "metadata": {
     "scrolled": false
    },
@@ -199,6 +199,67 @@
    "source": [
     "## continuous"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- msno: string (nullable = true)\n",
+      " |-- trans_date: string (nullable = true)\n",
+      " |-- pay_method: string (nullable = true)\n",
+      " |-- plan_days: string (nullable = true)\n",
+      " |-- list_price: string (nullable = true)\n",
+      " |-- actual_paid: string (nullable = true)\n",
+      " |-- discount: string (nullable = true)\n",
+      " |-- paid_per_day: string (nullable = true)\n",
+      " |-- auto_renew: string (nullable = true)\n",
+      " |-- intersected_len: string (nullable = true)\n",
+      " |-- is_latest: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df0.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import col, sum, round\n",
+    "\n",
+    "# field = 'list_price'\n",
+    "# field = 'actual_paid'\n",
+    "field = 'discount'\n",
+    "\n",
+    "df1 = df0.select('msno', 'intersected_len', field, \n",
+    "                 (col('intersected_len')/col('plan_days')*col(field)).alias('weighted_value'))\n",
+    "df2 = df1.groupBy('msno').agg(sum('intersected_len').alias('total_sub_days'),\n",
+    "                              sum(field).alias('sum'), \n",
+    "                              sum('weighted_value').alias('weighted_sum'))\n",
+    "df3 = df2.select('msno', col('sum').alias(field+'_sum'),\n",
+    "                 round(col('weighted_sum')/col('total_sub_days'), 3).alias(field+'_per_sub_day'))\n",
+    "\n",
+    "# output\n",
+    "outfile = dir0 + '33.features_continuous/' + file_flag + '/' + field\n",
+    "df3.write.format('csv').option('header','true').save(outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
