--- a/prepare_big_table_01.yang/46.categorical_feature_selection.ipynb
+++ b/prepare_big_table_01.yang/46.categorical_feature_selection.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -71,6 +71,7 @@
       " |-- has_long_gap: boolean (nullable = true)\n",
       " |-- last_pay_method: string (nullable = true)\n",
       " |-- pay_method_mode: string (nullable = true)\n",
+      " |-- is_churn: boolean (nullable = true)\n",
       " |-- days_since_init_regist_log: double (nullable = true)\n",
       " |-- total_gap_len: integer (nullable = true)\n",
       " |-- last_list_price: integer (nullable = true)\n",
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -353,12 +354,12 @@
     }
    ],
    "source": [
-    "df1.crosstab('last_pay_method', 'registered_via').show()"
+    "df0.crosstab('last_pay_method', 'registered_via').show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -385,12 +386,12 @@
     }
    ],
    "source": [
-    "df1.crosstab('city', 'registered_via').show()"
+    "df0.crosstab('city', 'registered_via').show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -398,13 +399,13 @@
      "output_type": "stream",
      "text": [
       "root\n",
+      " |-- msno: string (nullable = true)\n",
       " |-- last_paid_per_day: double (nullable = true)\n",
       " |-- w12_M50_D_Mtotal_sqrt: double (nullable = true)\n",
+      " |-- w1_M75_sqrt: double (nullable = true)\n",
       " |-- days_since_init_regist_log: double (nullable = true)\n",
       " |-- w1_Mtotal_D_w12_Mtotal_log: double (nullable = true)\n",
-      " |-- last1WeekOnLine_D_last12WeekOnLine_log: double (nullable = true)\n",
       " |-- w1_M50_D_Mtotal_sqrt: double (nullable = true)\n",
-      " |-- msno: string (nullable = true)\n",
       " |-- last1WeekOnLine: integer (nullable = true)\n",
       " |-- total_gap_len: integer (nullable = true)\n",
       " |-- actual_paid_cnt_uniq: integer (nullable = true)\n",
@@ -414,10 +415,11 @@
       " |-- w1_M25_D_Mtotal_sqrt: double (nullable = true)\n",
       " |-- w1_Munq_D_Mtotal_sqrt: double (nullable = true)\n",
       " |-- w1_Mtotal_log: double (nullable = true)\n",
-      " |-- w1_M75_sqrt: double (nullable = true)\n",
+      " |-- last1WeekOnLine_D_last12WeekOnLine_log: double (nullable = true)\n",
       " |-- city: string (nullable = true)\n",
       " |-- registered_via: string (nullable = true)\n",
       " |-- last_pay_method: string (nullable = true)\n",
+      " |-- is_churn: boolean (nullable = true)\n",
       "\n"
      ]
     }
@@ -434,22 +436,26 @@
     "cols_to_drop = list(set(cols_categorical) - set(cols_categ_select2))\n",
     "df = df0.drop(*cols_to_drop)\n",
     "\n",
-    "# move categorical fieds to the end\n",
-    "cols_other = list(set(df.columns) - set(cols_categ_select2))\n",
-    "df1 = df.select(*[cols_other + cols_categ_select2])\n",
+    "# move categorical fields to the end\n",
+    "cols_other = list(set(df.columns) - set(cols_categ_select2) - set(('msno', 'is_churn')))\n",
+    "df1 = df.select('msno', *(cols_other + cols_categ_select2), 'is_churn')\n",
     "\n",
     "df1.printSchema()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# output\n",
-    "outfile = dir0 + '03a.numer-transformed_categ-transformed'\n",
-    "df1.write.format('parquet').save(outfile)"
+    "\n",
+    "#outfile = dir0 + '03a.numer-transformed_categ-transformed'\n",
+    "#df1.write.format('parquet').save(outfile)\n",
+    "\n",
+    "outfile = dir0 + '03a.numer-transformed_categ-transformed.csv'\n",
+    "df1.coalesce(1).write.format('csv').option('header', 'true').save(outfile)"
    ]
   },
   {
