--- a/create_features_from_transactions_v1.yang/31.features_from_transaction_info.ipynb
+++ b/create_features_from_transactions_v1.yang/31.features_from_transaction_info.ipynb
@@ -15,13 +15,13 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://10.120.27.99:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://master:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
-       "                <dd><code>v2.2.1</code></dd>\n",
+       "                <dd><code>v2.3.0</code></dd>\n",
        "              <dt>Master</dt>\n",
-       "                <dd><code>local[*]</code></dd>\n",
+       "                <dd><code>local[4]</code></dd>\n",
        "              <dt>AppName</dt>\n",
        "                <dd><code>PySparkShell</code></dd>\n",
        "            </dl>\n",
@@ -31,7 +31,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f5f684591d0>"
+       "<pyspark.sql.session.SparkSession at 0x7fb1fb6dd198>"
       ]
      },
      "execution_count": 1,
@@ -45,19 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir0 = 'file:///home/cloudera/2.kkbox_churn/data01/from_raw_transactions-v1/feature_creation/'\n",
-    "file_flag = 'msno_non-letter'\n",
-    "infile_trans = dir0 + '02b.w_features_added/' + file_flag\n",
+    "# dir0 = 'file:///home/cloudera/2.kkbox_churn/data01/from_raw_transactions-v1/feature_creation/'\n",
+    "dir0 = '/home/master/iii_projects_data/kkbox_churn/data01/from_raw_transactions_v1/feature_creation/'\n",
+    "# file_flag = 'msno_non-letter'\n",
+    "infile_trans = dir0 + '02b.w_features_added/'\n",
     "infile_period_lens = dir0 + '21.subscrip-period_intersected_lengths'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +116,7 @@
     "                      'paid_per_day AS last_paid_per_day')\n",
     "\n",
     "# output\n",
-    "outfile = dir0 + '31.features_latest/' + file_flag\n",
+    "outfile = dir0 + '31.features_latest/'\n",
     "df_last.write.format('csv').option('header','true').save(outfile)"
    ]
   },
@@ -128,18 +129,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql.functions import count\n",
     "from pyspark.sql.functions import concat_ws, collect_list\n",
     "\n",
-    "#field = 'actual_paid'\n",
-    "#field = 'auto_renew'\n",
-    "#field = 'discount'\n",
-    "#field = 'list_price'\n",
-    "#field = 'pay_method'\n",
+    "# field = 'actual_paid'\n",
+    "# field = 'auto_renew'\n",
+    "# field = 'discount'\n",
+    "# field = 'list_price'\n",
+    "# field = 'pay_method'\n",
     "field = 'plan_days'\n",
     "\n",
     "df1 = df0.select('msno', field)\n",
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,14 +166,12 @@
     "    max_count = max([int(it[1])  for it in cat_counts])\n",
     "    cats_w_max_cnt = [it[0]  for it in cat_counts  if it[1] == str(max_count)]\n",
     "\n",
-    "    return (count_uniq, random.choice(cats_w_max_cnt))\n",
-    "\n",
-    "#find_uniq_cnt_et_mode('a:3')    "
+    "    return (count_uniq, random.choice(cats_w_max_cnt))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -189,7 +188,7 @@
     "      .select('msno', col('cnt_uniq').alias(field+'_cnt_uniq'), col('mode').alias(field+'_mode'))\n",
     "\n",
     "# output\n",
-    "outfile = dir0 + '32.features_categorical/' + file_flag + '/' + field\n",
+    "outfile = dir0 + '32.features_categorical/' + field\n",
     "df5.write.format('csv').option('header','true').save(outfile)"
    ]
   },
@@ -231,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +249,7 @@
     "                 round(col('weighted_sum')/col('total_sub_days'), 3).alias(field+'_per_sub_day'))\n",
     "\n",
     "# output\n",
-    "outfile = dir0 + '33.features_continuous/' + file_flag + '/' + field\n",
+    "outfile = dir0 + '33.features_continuous/'+field\n",
     "df3.write.format('csv').option('header','true').save(outfile)"
    ]
   },
@@ -285,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.4"
   },
   "toc": {
    "base_numbering": 1,
