--- a/create_features_from_transactions_v1.yang/32.merge_features.ipynb
+++ b/create_features_from_transactions_v1.yang/32.merge_features.ipynb
@@ -15,13 +15,13 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://10.120.27.99:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://master:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
-       "                <dd><code>v2.2.1</code></dd>\n",
+       "                <dd><code>v2.3.0</code></dd>\n",
        "              <dt>Master</dt>\n",
-       "                <dd><code>local[*]</code></dd>\n",
+       "                <dd><code>local[4]</code></dd>\n",
        "              <dt>AppName</dt>\n",
        "                <dd><code>PySparkShell</code></dd>\n",
        "            </dl>\n",
@@ -31,7 +31,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f26983fe1d0>"
+       "<pyspark.sql.session.SparkSession at 0x7efeffb3f198>"
       ]
      },
      "execution_count": 1,
@@ -49,7 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir0 = '/home/cloudera/2.kkbox_churn/data01/from_raw_transactions-v1/feature_creation/'"
+    "# dir0 = '/home/cloudera/2.kkbox_churn/data01/from_raw_transactions-v1/feature_creation/'\n",
+    "dir0 = '/home/master/iii_projects_data/kkbox_churn/data01/from_raw_transactions_v1/feature_creation/'"
    ]
   },
   {
@@ -75,22 +76,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# subdir = '32.features_categorical/'\n",
-    "subdir = '33.features_continuous/'\n",
-    "\n",
-    "divisions = ['msno_a-n', 'msno_A-N',  'msno_non-letter', 'msno_o-z', 'msno_O-Z']\n",
-    "division = divisions[4]\n",
-    "\n",
     "# items = ['actual_paid', 'auto_renew', 'discount', 'list_price', 'pay_method', 'plan_days']\n",
+    "\n",
+    "subdir = '33.features_continuous/'\n",
     "items = ['actual_paid', 'discount', 'list_price']\n",
     "\n",
     "dfs = []\n",
     "for it in items:\n",
-    "    infile = dir0+subdir+division+'/'+it\n",
+    "    infile = dir0+subdir+it\n",
     "    df = spark.read.format('csv').option('header', 'true').load(infile)\n",
     "    dfs.append(df)\n",
     "    \n",
@@ -99,7 +97,7 @@
     "    df1 = df.withColumnRenamed('msno', 'msno_')\n",
     "    df_join = df_join.join(df1, df_join['msno']==df1['msno_'], 'inner').drop('msno_')\n",
     "    \n",
-    "outfile = dir0+subdir+division+'/'+'all-features'\n",
+    "outfile = dir0+subdir+'all-features'\n",
     "df_join.write.format('csv').option('header','true').save(outfile)"
    ]
   },
@@ -121,82 +119,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "infile = dir0+'30.features_1'\n",
+    "infile = dir0+'30.features_gaps-related'\n",
     "df30 = spark.read.format('csv').option('header','true').load(infile) \\\n",
     "       .drop('gaps')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "subdirs = ['31.features_latest/', '32.features_categorical/', '33.features_continuous/']\n",
     "\n",
-    "divisions = ['msno_a-n', 'msno_A-N',  'msno_non-letter', 'msno_o-z', 'msno_O-Z']\n",
-    "division = divisions[4]\n",
-    "\n",
-    "###\n",
     "df_join = df30\n",
     "for subdir in subdirs:\n",
-    "    infile = dir0+subdir+division\n",
+    "    infile = dir0+subdir\n",
     "    if not subdir.startswith('31.'):\n",
     "        infile += '/'+'all-features'\n",
     "    df = spark.read.format('csv').option('header','true').load(infile) \\\n",
     "         .withColumnRenamed('msno', 'msno_')\n",
     "    df_join = df_join.join(df, df_join['msno']==df['msno_'], 'inner').drop('msno_')\n",
     "    \n",
-    "outfile = dir0 + '34.all_trans_features/' + division\n",
+    "outfile = dir0 + '34.all_trans_features/'\n",
     "df_join.write.format('csv').option('header','true').save(outfile)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "subdir = '34.all_trans_features/'\n",
-    "divisions = ['msno_a-n', 'msno_A-N',  'msno_non-letter', 'msno_o-z', 'msno_O-Z']\n",
-    "\n",
-    "dfs = []\n",
-    "for division in divisions:\n",
-    "    infile = dir0 + subdir + division\n",
-    "    df = spark.read.format('csv').option('header','true').load(infile)\n",
-    "    dfs.append(df)\n",
-    "    \n",
-    "df_union = dfs[0]\n",
-    "for df in dfs[1:]:\n",
-    "    df_union = df_union.union(df)\n",
-    "    \n",
-    "outfile = dir0 + subdir + 'all-members'\n",
-    "df_union.coalesce(8).write.format('csv').option('header','true').save(outfile)"
    ]
   },
   {
@@ -223,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.4"
   },
   "toc": {
    "base_numbering": 1,
