--- a/create_features_from_transactions_v1.yang/21.determine_init-final-et-gaps_memberwise.ipynb
+++ b/create_features_from_transactions_v1.yang/21.determine_init-final-et-gaps_memberwise.ipynb
@@ -15,13 +15,13 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://10.120.27.99:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://master:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
-       "                <dd><code>v2.2.1</code></dd>\n",
+       "                <dd><code>v2.3.0</code></dd>\n",
        "              <dt>Master</dt>\n",
-       "                <dd><code>local[*]</code></dd>\n",
+       "                <dd><code>local[4]</code></dd>\n",
        "              <dt>AppName</dt>\n",
        "                <dd><code>PySparkShell</code></dd>\n",
        "            </dl>\n",
@@ -31,7 +31,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7fba3c279240>"
+       "<pyspark.sql.session.SparkSession at 0x7ff1a1875748>"
       ]
      },
      "execution_count": 1,
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,8 @@
     }
    ],
    "source": [
-    "dir0 = '/home/cloudera/2.kkbox_churn/data01/from_raw_transactions-v1/feature_creation/'\n",
+    "# dir0 = '/home/cloudera/2.kkbox_churn/data01/from_raw_transactions-v1/feature_creation/'\n",
+    "dir0 = '/home/master/iii_projects_data/kkbox_churn/data01/from_raw_transactions_v1/feature_creation/'\n",
     "infile = dir0 + '13.members-w-last-end-in-2017_ends-after-20161001'\n",
     "\n",
     "df0 = spark.read.format('csv').option('header','true').load(infile) \n",
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,38 +91,43 @@
     }
    ],
    "source": [
+    "from pyspark.sql.functions import concat_ws\n",
+    "\n",
     "df1 = df0.select('msno', concat_ws('_', 'start_date', 'end_date').alias('period'))\n",
     "df1.show(1, truncate=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+\n",
-      "|msno                                        |subscrip_periods                                                                                                                   |\n",
-      "+--------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+\n",
-      "|++4RuqBw0Ss6bQU4oMxaRlbBPoWzoEiIZaxPM04Y4+U=|2016-10-15_2016-11-13/2016-12-15_2017-01-13/2017-02-13_2017-03-13/2016-09-14_2016-10-13/2016-11-14_2016-12-13/2017-01-15_2017-02-13|\n",
-      "+--------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+\n",
-      "only showing top 1 row\n",
+      "+--------------------------------------------+-----------------------------------------------------------------+\n",
+      "|msno                                        |subscrip_periods                                                 |\n",
+      "+--------------------------------------------+-----------------------------------------------------------------+\n",
+      "|fF1YY7dQ4AjyMvfSi53Xu7Kdr6+U2Cgv4032gvmCF5Q=|2016-12-02_2016-12-31/2016-09-02_2016-10-01/2016-10-11_2017-02-07|\n",
+      "+--------------------------------------------+-----------------------------------------------------------------+\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "from pyspark.sql.functions import concat_ws, collect_list\n",
+    "from pyspark.sql.functions import concat_ws, collect_list, col\n",
     "df2 = df1.groupBy('msno').agg(concat_ws('/', collect_list('period')).alias('subscrip_periods'))\n",
-    "df2.show(1, truncate=False)"
+    "\n",
+    "#df2.show(1, truncate=False)\n",
+    "df2.where(col('msno').startswith('fF1YY7d')).show(truncate=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,12 +201,11 @@
     "    Return (init_date, final_date, gaps).\n",
     "    '''\n",
     "    subscrip_periods = [p.split('_') for p in subscrip_periods_str.split('/')]\n",
-    "    subscrip_periods.sort(key=lambda p: p[0])\n",
     "    \n",
     "    # determine final date\n",
-    "    final_date = min(subscrip_periods[-1][1], '2017-02-28')\n",
+    "    final_date = max([p[1] for p in subscrip_periods])\n",
     "    \n",
-    "    # determine init. date (final_date - 3 months)\n",
+    "    # determine init. date (final_date - 89 days)\n",
     "    init_date = (DT.datetime.strptime(final_date, '%Y-%m-%d') - DT.timedelta(days=89)) \\\n",
     "                .strftime('%Y-%m-%d')\n",
     "    \n",
@@ -213,7 +218,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('2016-11-10', '2017-02-07', [])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subscrip_periods = '2016-12-02_2016-12-31/2016-09-02_2016-10-01/2016-10-11_2017-02-07'\n",
+    "determin_init_final_et_gaps(subscrip_periods)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -223,26 +249,26 @@
       "+--------------------------------------------+----------+----------+---------------------+\n",
       "|msno                                        |init_date |final_date|gaps                 |\n",
       "+--------------------------------------------+----------+----------+---------------------+\n",
-      "|++4RuqBw0Ss6bQU4oMxaRlbBPoWzoEiIZaxPM04Y4+U=|2016-12-01|2017-02-28|                     |\n",
-      "|+/HS8LzrRGXolKbxRzDLqrmwuXqPOYixBIPXkyNcKNI=|2016-12-01|2017-02-28|                     |\n",
-      "|+/namlXq+u3izRjHCFJV4MgqcXcLidZYszVsROOq/y4=|2016-12-01|2017-02-28|                     |\n",
-      "|+0/X9tkmyHyet9X80G6GTrDFHnJqvai8d1ZPhayT0os=|2016-12-01|2017-02-28|                     |\n",
-      "|+09YGn842g6h2EZUXe0VWeC4bBoCbDGfUboitc0vIHw=|2016-12-01|2017-02-28|                     |\n",
+      "|++4RuqBw0Ss6bQU4oMxaRlbBPoWzoEiIZaxPM04Y4+U=|2016-12-14|2017-03-13|                     |\n",
+      "|+/HS8LzrRGXolKbxRzDLqrmwuXqPOYixBIPXkyNcKNI=|2016-12-17|2017-03-16|                     |\n",
+      "|+/namlXq+u3izRjHCFJV4MgqcXcLidZYszVsROOq/y4=|2017-01-01|2017-03-31|                     |\n",
+      "|+0/X9tkmyHyet9X80G6GTrDFHnJqvai8d1ZPhayT0os=|2017-01-01|2017-03-31|                     |\n",
+      "|+09YGn842g6h2EZUXe0VWeC4bBoCbDGfUboitc0vIHw=|2017-01-01|2017-03-31|                     |\n",
       "|+0RJtbyhoPAHPa+34MkYcE2Ox0cjMgJOTXMXVBYgkJE=|2016-11-30|2017-02-27|                     |\n",
-      "|+0jTOa6KGPk1vtNTwRDMZc/McUo41AeuwV3ndo54Y+Q=|2016-12-01|2017-02-28|                     |\n",
-      "|+0l+FDuhyjaZnu0APnrg5L9QqgaRw4RmdQMvqOtKDmU=|2016-12-01|2017-02-28|                     |\n",
-      "|+2Df04hr61UUJijMM2xR97gtoQWWDJpnJVKQ7VMYN9o=|2016-12-01|2017-02-28|                     |\n",
-      "|+2oK/qWmYvAnfNZsVV5pdsJ9n6d/LZn6CdwiJajGZas=|2016-12-01|2017-02-28|                     |\n",
-      "|+2sYXqnHWBACTG4Pyd0rBECqU/XZtiW9HfYdGztJXdk=|2016-12-01|2017-02-28|                     |\n",
-      "|+2vC1rM36Emx77UanRb3cUohWiIf7knfVIDO2+R78BE=|2016-12-01|2017-02-28|                     |\n",
-      "|+2yahLNmcSv1yBBIAaq14RZRW+zOWh1cwg2smgNjgTY=|2016-12-01|2017-02-28|2016-12-01_2016-12-15|\n",
+      "|+0jTOa6KGPk1vtNTwRDMZc/McUo41AeuwV3ndo54Y+Q=|2016-12-04|2017-03-03|                     |\n",
+      "|+0l+FDuhyjaZnu0APnrg5L9QqgaRw4RmdQMvqOtKDmU=|2016-12-24|2017-03-23|                     |\n",
+      "|+2Df04hr61UUJijMM2xR97gtoQWWDJpnJVKQ7VMYN9o=|2016-12-05|2017-03-04|                     |\n",
+      "|+2oK/qWmYvAnfNZsVV5pdsJ9n6d/LZn6CdwiJajGZas=|2016-12-20|2017-03-19|                     |\n",
+      "|+2sYXqnHWBACTG4Pyd0rBECqU/XZtiW9HfYdGztJXdk=|2016-12-13|2017-03-12|                     |\n",
+      "|+2vC1rM36Emx77UanRb3cUohWiIf7knfVIDO2+R78BE=|2016-12-04|2017-03-03|                     |\n",
+      "|+2yahLNmcSv1yBBIAaq14RZRW+zOWh1cwg2smgNjgTY=|2016-12-15|2017-03-14|                     |\n",
       "|+43UqHvqzu5STDVIuBLWryllqYYP4UrG9XyiajeGePk=|2016-12-01|2017-02-28|                     |\n",
-      "|+4XdQOd2lqwKAzUkLHKqaJcUvrtKNo0FKRAGQ+Us9vw=|2016-12-01|2017-02-28|                     |\n",
-      "|+5DvJ9JGZqYFJ+tSvRBtGe6MRLSFdtOVNHdfqnCpxD0=|2016-12-01|2017-02-28|2016-12-01_2017-01-01|\n",
-      "|+5iq4ECBqIcAbIVw0OZv0JImbEhu9Oqvk8UeEWWZIbc=|2016-12-01|2017-02-28|                     |\n",
-      "|+5tihO+uXoVrXxlMxutWHyamHh1+drX5O3C/cup1VuQ=|2016-12-01|2017-02-28|2016-12-22_2017-01-22|\n",
+      "|+4XdQOd2lqwKAzUkLHKqaJcUvrtKNo0FKRAGQ+Us9vw=|2016-12-08|2017-03-07|                     |\n",
+      "|+5DvJ9JGZqYFJ+tSvRBtGe6MRLSFdtOVNHdfqnCpxD0=|2017-01-01|2017-03-31|                     |\n",
+      "|+5iq4ECBqIcAbIVw0OZv0JImbEhu9Oqvk8UeEWWZIbc=|2016-12-07|2017-03-06|                     |\n",
+      "|+5tihO+uXoVrXxlMxutWHyamHh1+drX5O3C/cup1VuQ=|2016-12-22|2017-03-21|2016-12-22_2017-01-22|\n",
       "|+8+f6Ok/grGz29Sl3A3WnmYeHcHyKrlB1SapnDfdFqA=|2016-11-17|2017-02-14|2016-12-06_2017-01-06|\n",
-      "|+A0cjGlj9lHusZoz5Qyu7chfM9cryPbiP+UY6VaaREo=|2016-12-01|2017-02-28|                     |\n",
+      "|+A0cjGlj9lHusZoz5Qyu7chfM9cryPbiP+UY6VaaREo=|2016-12-18|2017-03-17|                     |\n",
       "+--------------------------------------------+----------+----------+---------------------+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -264,14 +290,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# output\n",
-    "outfile = dir0 + '20.gaps_for_each_member'\n",
+    "outfile = dir0 + '20.init-final-et-gaps_for_each_member'\n",
     "df3.write.format('csv').option('header', 'true').save(outfile)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -290,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.4"
   },
   "toc": {
    "base_numbering": 1,
